kubernetes/loanservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loanservice-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: loanservice-app
  template:
    metadata:
      labels:
        app: loanservice-app
    spec:
      containers:
        - name: loanservice-container
          image: localhost:5000/loanservice
          imagePullPolicy: Always
          ports:
            - containerPort: 7001
