kubernetes/loginservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginservice-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: loginservice-app
  template:
    metadata:
      labels:
        app: loginservice-app
    spec:
      containers:
        - name: loginservice-container
          image: localhost:5000/loginservice
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
