kubernetes/loginservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginservice-svc
spec:
  type: ClusterIP
  selector:
    app: loginservice-app
  ports:
    - protocol: TCP
      port: 3101
      targetPort: 7000
