kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /api/loan/(.*) /$1 break;
      rewrite /api/login/(.*) /$1 break;
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/loan
            pathType: Prefix
            backend:
              service:
                name: "loanservice-svc"
                port:
                  number: 3100
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: "loginservice-svc"
                port:
                  number: 3101
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: "frontend-svc"
                port:
                  number: 3102
